@@ -9,6 +9,9 @@ git-annex (5.20140128) UNRELEASED; urgency=medium
   * sync --content: Honor annex-ignore configuration.
   * sync: Don't try to sync with xmpp remotes, which are only currently
     supported when using the assistant.
+  * sync --content: Re-pull from remotes after downloading content,
+    since that can take a while and other changes may be pushed in the
+    meantime.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 28 Jan 2014 13:57:19 -0400
 
